2005-06-09  Paul D. Smith  <psmith@gnu.org>

        * variable.c (push_new_variable_scope): File variables point
        directly to the global_setlist variable.  So, inserting a new
        scope in front of that has no effect on those variables: they
        don't go through current_variable_set_list.  If we're pushing a
        scope and the current scope is global, push it "the other way" so
        that the new setlist is in the global_setlist variable, and
        next points to a new setlist with the global variable set.
        (pop_variable_scope): Properly undo a push with the new
        semantics.
        Fixes Savannah bug #11913.

2005-05-31  Boris Kolpackov  <boris@kolpackov.net>

	* job.c (reap_children): Don't die of the command failed but
	the dontcare flag is set. Fixes Savannah bug #13216.

	* implicit.c (pattern_search): When creating a target from
	an implicit rule match, lookup pattern target and set precious
	flag in a newly created target. Fixes Savannah bug #13218.

2005-05-13  Paul D. Smith  <psmith@gnu.org>

	Implement "if... else if... endif" syntax.

	* read.c (eval): Push all checks for conditional words ("ifeq",
	"else", etc.) down into the conditional_line() function.
	(conditional_line): Rework to allow "else if..." clause.  New
	return value -2 for lines which are not conditionals.  The
	ignoring flag can now also be 2, which means "already parsed a
	true branch".  If that value is seen no other branch of this
	conditional can be considered true.  In the else parsing if there
	is extra text after the else, invoke conditional_line()
	recursively to see if it's another conditional.  If not, it's an
	error.  If so, raise the conditional value to this level instead
	of creating a new conditional nesting level.  Special check for
	"else" and "endif", which aren't allowed on the "else" line.
	* doc/make.texi (Conditional Syntax): Document the new syntax.

2005-05-09  Paul D. Smith  <psmith@gnu.org>
